--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,11 +33,11 @@ body::before {
 }
 
 a {
-  color: #12d640;
+  color: #fcba03;
 }
 
 a:hover {
-  color: #12d640;
+  color: #fcba03;
   text-decoration: none;
 }
 
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   line-height: 1;
   font-weight: 700;
-  font-family: "Poppins", sans-serif;
+  /*font-family: "Poppins", sans-serif;*/
 }
 
 #header h1 a, #header h1 a:hover {
@@ -80,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 #header h2 {
   font-size: 24px;
   margin-top: 20px;
-  color: #12d640;
+  color: #fcba03;
 }
 
 #header h2 span {
@@ -182,7 +182,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .nav-menu a:hover, .nav-menu .active > a, .nav-menu li:hover > a {
-  color: #12d640;
+  color: #fcba03;
   text-decoration: none;
 }
 
@@ -727,7 +727,7 @@ section .container {
 }
 
 .services .icon-box:hover h4 a, .services .icon-box:hover p {
-  color: #12d640;
+  color: #fcba03;
 }
 
 /*--------------------------------------------------------------
@@ -908,7 +908,7 @@ section .container {
 
 .contact .info-box h3 {
   font-size: 20px;
-  color: #28a745;
+  color: #fcba03;
   font-weight: 700;
   margin: 10px 0 8px 68px;
 }
@@ -936,7 +936,7 @@ section .container {
 }
 
 .contact .info-box .social-links a:hover {
-  color: #12d640;
+  color: #fcba03;
 }
 
 .contact .php-email-form {
